# fr-online-product-studio

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: user-commit.md
prompt/: adiitional_plan.md  alpha_edge_refiner.md  cli.md  firstprompt.md  judge_bg.md  make_shadow.md  myplan.md
scripts/: prepare_text_data.py  preprocess_training_data.py  test_background_classifier.py  test_background_removal.py  test_edge_refiner.py  test_image_classifier.py  test_rmbg2.py  test_shadow.py  test_text_generator.py  test_tone_predictor.py  train_swallow_lora.py  train_tone_model.py
src/fr_studio/: __init__.py
src/fr_studio/application/: __init__.py  alpha_edge_refiner.py  background_classifier.py  background_remover.py  image_centering.py  image_view_classifier.py  repositories.py  shadow_adder.py  text_generator.py  tone_adjuster.py  tone_predictor.py  transform.py
src/fr_studio/domain/: __init__.py  image.py  product.py
src/fr_studio/gui/: __init__.py  app.py  main.py
src/fr_studio/gui/components/: __init__.py  header.py  product_list_item.py
src/fr_studio/gui/components/cards/: __init__.py  image_card.py  project_card.py
src/fr_studio/gui/components/dialogs/: __init__.py  upload_dialog.py
src/fr_studio/gui/components/sliders/: __init__.py
src/fr_studio/gui/db/: __init__.py  database.py
src/fr_studio/gui/db/models/: product_image.py
src/fr_studio/gui/di/: __init__.py  container.py
src/fr_studio/gui/screens/: __init__.py  base.py  create_project.py  dashboard.py  image_editor.py  loading.py  project_detail.py
src/fr_studio/gui/services/: __init__.py  image_downloader.py  navigation.py  product_image_service.py
src/fr_studio/gui/styles/: __init__.py  styles.qss  theme.py
src/fr_studio/gui/workers/: __init__.py  base.py  project_creation.py  upload.py
src/fr_studio/infrastructure/: __init__.py  birefnet_remover.py  google_auth.py  google_drive_client.py  google_sheets_client.py  model_state.py  numpy_feature_extractor.py  numpy_tone_adjuster.py  pillow_centerer.py  pillow_edge_refiner.py  pillow_shadow_adder.py  pixel_background_classifier.py  qwen_vl_classifier.py  sklearn_predictor.py  stablelm_text_generator.py  swallow_generator.py
