[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fr-studio"
version = "0.1.0"
description = "Frgeek古着オンラインストア向け画像加工・商品説明生成ツール"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Frgeek" },
]
dependencies = [
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "opencv-python>=4.8.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.36.0",
    "einops",
    "kornia",
    "timm",
    "scipy",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fr_studio"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
